Changes to NFe mail sending process - Validate e-mails with REGEX - Main e-mails are all in TO field insted of CC - Exclude the sender e-mail from the to list